--- a/packages/shared/src/utils/styles/modules/FooterContentPie.module.scss
+++ b/packages/shared/src/utils/styles/modules/FooterContentPie.module.scss
@@ -9,6 +9,7 @@ footer {
 
 .footer__content {
     margin: 0 auto;
+    width: 100%;
     max-width: 1440px;
     padding: 16px;
     display: flex;
@@ -21,7 +22,6 @@ footer {
     padding: 30px 0px 30px 0px;
     flex-wrap: wrap;
     max-width: 100%;
-    margin-right: 15px;
 }
 .info__about {
     display: flex;
